[metadata]
name = hydrogen
summary = Hydrogen is a package management workflow tool for Python.
author = David Gidwani
author-email = david.gidwani@gmail.com
license = 2-clause BSD
description-file = README.rst
classifier =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[entry_points]
console_scripts =
  hydrogen = hydrogen.cli:main

[files]
modules =
    hydrogen
data_files =
    share/hydrogen/docs = docs/build/*

[build_sphinx]
source_dir = docs/source
build_dir = docs/build

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True
warnerrors = True
